--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
+    <div class="container">
+        <button class="btn">Rock</button>
+        <button class="btn">Paper</button>
+        <button class="btn">Scissors</button>
+    </div>
+
     <script src="./script.js"></script>
 </body>
 </html>
